--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">resumeUploadinProfilePage</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">12,164</td><td></td><td></td></tr>
+<tr><td><a href="#t0">resumeUploadinProfilePage</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,716</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">resumeUploadinProfilePage &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testCases.resumeUploadinProfilePage</td><td><a href="#m0">uploadResumeTest</a></td><td rowspan="1">1755491029390</td><td rowspan="1">7170</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">resumeUploadinProfilePage &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testCases.resumeUploadinProfilePage</td><td><a href="#m0">clickOnUpdatePrifileLink</a></td><td rowspan="1">1756818841484</td><td rowspan="1">4512</td></tr><tr class="passedeven"><td><a href="#m1">uploadResume</a></td><td rowspan="1">1756818846013</td><td rowspan="1">5373</td></tr></tbody>
 </table>
-<h2>resumeUploadinProfilePage</h2><h3 id="m0">testCases.resumeUploadinProfilePage#uploadResumeTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>resumeUploadinProfilePage</h2><h3 id="m0">testCases.resumeUploadinProfilePage#clickOnUpdatePrifileLink</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testCases.resumeUploadinProfilePage#uploadResume</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
