--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testCases.resumeUploadinProfilePage" class="method navigator-link" hash-for-method="uploadResumeTest">uploadResumeTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testCases.resumeUploadinProfilePage" class="method navigator-link" hash-for-method="clickOnUpdatePrifileLink">clickOnUpdatePrifileLink</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testCases.resumeUploadinProfilePage" class="method navigator-link" hash-for-method="uploadResume">uploadResume</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -126,9 +131,16 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="uploadResumeTest">
-                  </a> <!-- uploadResumeTest -->
-                  <span class="method-name">uploadResumeTest</span>
+                  <a name="clickOnUpdatePrifileLink">
+                  </a> <!-- clickOnUpdatePrifileLink -->
+                  <span class="method-name">clickOnUpdatePrifileLink</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="uploadResume">
+                  </a> <!-- uploadResume -->
+                  <span class="method-name">uploadResume</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -178,7 +190,7 @@
               <span class="test-group-name">Master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">uploadResumeTest</span>
+                <span class="method-in-group-name">clickOnUpdatePrifileLink</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -186,7 +198,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">uploadResumeTest</span>
+                <span class="method-in-group-name">clickOnUpdatePrifileLink</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -194,7 +206,7 @@
               <span class="test-group-name">Sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">uploadResumeTest</span>
+                <span class="method-in-group-name">clickOnUpdatePrifileLink</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -202,7 +214,7 @@
               <span class="test-group-name">Smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">uploadResumeTest</span>
+                <span class="method-in-group-name">clickOnUpdatePrifileLink</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -222,16 +234,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'uploadResumeTest')
+data.setCell(0, 1, 'uploadResume')
 data.setCell(0, 2, 'testCases.resumeUploadinProfilePage')
-data.setCell(0, 3, 7170);
+data.setCell(0, 3, 5373);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'clickOnUpdatePrifileLink')
+data.setCell(1, 2, 'testCases.resumeUploadinProfilePage')
+data.setCell(1, 3, 4512);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 20 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -263,12 +279,16 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">uploadResumeTest</span>
-                <span class="method-start">4210 ms</span>
+                <span class="method-name">clickOnUpdatePrifileLink</span>
+                <span class="method-start">10081 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">uploadResume</span>
+                <span class="method-start">14610 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">11405 ms</span>
+                <span class="method-start">19986 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
